--- a/sub/app/views/layouts/for_help.html.erb
+++ b/sub/app/views/layouts/for_help.html.erb
@@ -49,19 +49,7 @@
 
 
   <div class="psvr_menu_out">
-    <div class="psvr_menu_in" id="psvr_navmenu">
-          <div class="psvr_menu" id="psvr_navmenu"><ul class="psvr" >
-              <li class="psvr" style="height:37px">&nbsp;</li>
-              <li class="psvr" ><a class="psvr " href="/"><span class="psvr" >首页</span></a></li>
-              <li class="psvr" ><a class="psvr " href="/courses"><span class="psvr" >本学期课程</span></a></li>
-           <li class="psvr" ><a class="psvr" href="/un_courses"><span class="psvr" >本学期未开</span></a></li>
-           <li class="psvr" ><a class="psvr" href="/users"><span class="psvr" >牛人龙虎榜</span></a></li>
-           <li class="psvr" ><a class="psvr" href="/articles"><span class="psvr" >过科攻略</span></a></li>
-           <li class="psvr" ><a class="psvr psvr_now" href="/for_help" title="求助"><span class="psvr" >求助</span></a></li>
-           <li class="psvr" ><a class="psvr" href="http://kejian.tv" title="返回主站" target="_blank"><span class="psvr" >返回主站</span></a></li>
-</ul>
-          </div>
-      </div>
+    <%= render 'psvr_navmenu' %>
   </div>
 </div>
 
