两站化，还差php的配置

--- a/sub/app/views/courses/index.html.erb
+++ b/sub/app/views/courses/index.html.erb
@@ -3,7 +3,7 @@
         <div class="psvr_contentbox">
             <table class="psvr psvr_seedtable" border="0" align="center" cellpadding="1" cellspacing="1" bgcolor="#cccccc" width="100%">
               <tr bgcolor="#f1f1f1">
-                <td height="28" colspan="8" align="left"><h3 class="psvr" ><%=kaixue_msg%>，这学期首都师范大学共开设了<%=Course.count%>门课，以下按课件数排序</h3></td>
+                <td height="28" colspan="8" align="left"><h3 class="psvr" ><%=kaixue_msg%>，这学期<%= Setting.ktv_subname_short %>共开设了<%=Course.count%>门课，以下按课件数排序</h3></td>
               </tr>
               <tr bgcolor="#fafafa" align="center">
                 <td width="5%" align="center">排名</td>
