--- a/sub/app/views/application/_ktv_bg_container.html.erb
+++ b/sub/app/views/application/_ktv_bg_container.html.erb
@@ -20,13 +20,13 @@
     });
     jQuery(window.psvr_bgImg).addClass('psvr_bgimg');
     jQuery(window.psvr_bgImg).attr('id','ktv_bg');
-    jQuery(window.psvr_bgImg).attr('alt',<%=raw $cnu_fotos[@bg_index].to_json %>);
+    jQuery(window.psvr_bgImg).attr('alt',<%=raw Setting.fotos[@bg_index].to_json %>);
     jQuery('#ktv_bg_container').prepend(window.psvr_bgImg);
     jQuery.extend(window.psvr_kina, {
         bg: jQuery('#ktv_bg')[0],
         timer: setInterval(window.psvr_kina.fix, 200)
     });
   };
-  window.psvr_bgImg.src = <%= raw asset_path("cnu_foto/#{@bg_index}.jpg").to_json %>;
+  window.psvr_bgImg.src = <%= raw asset_url("/sub/#{Setting.sub}_foto/@bg_index.jpg").to_json %>;
   //jQuery('body').css('padding-bottom',jQuery(window).height()/2);
 <% end %>
