--- a/sub/app/views/layouts/application.html.erb
+++ b/sub/app/views/layouts/application.html.erb
@@ -179,7 +179,7 @@
 <div id="psvr_header">
  <div class="psvr_headtop">
       <div class="psvr_logo">
-        <a href="/" class="psvr" id="psvr_logimg_a"><img class="psvr" src="<%= asset_path "logo_<%=Setting.ktv_sub%>.png" %>" alt="<%= Setting.ktv_subname %>课件交流系统" id="psvr_logimg"></a>
+        <a href="/" class="psvr" id="psvr_logimg_a"><img class="psvr" src="<%= asset_path "logo_#{Setting.ktv_sub}.png" %>" alt="<%= Setting.ktv_subname %>课件交流系统" id="psvr_logimg"></a>
       </div>
   </div>
 
