--- a/sub/simple/simple/template/default/common/css_sample.htm
+++ b/sub/simple/simple/template/default/common/css_sample.htm
@@ -4,10 +4,10 @@
 		<title>css_sample.htm - ultrax</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=gbk" />
 		<meta name="author" content=" Created by Dennis Lee on 6/23/10. " />
-		<link rel="stylesheet" type="text/css" href="../../../data/cache/style_1_common.css" />
-		<link rel="stylesheet" type="text/css" href="../../../data/cache/style_1_forum.css" />
-		<link rel="stylesheet" type="text/css" href="../../../data/cache/style_1_forum_forumdisplay.css" />
-		<link rel="stylesheet" type="text/css" href="../../../data/cache/style_1_forum_viewthread.css" />
+		<link rel="stylesheet" type="text/css" href="../../../data_<!--{echo PSVR_KTV_SUB}-->/cache/style_1_common.css" />
+		<link rel="stylesheet" type="text/css" href="../../../data_<!--{echo PSVR_KTV_SUB}-->/cache/style_1_forum.css" />
+		<link rel="stylesheet" type="text/css" href="../../../data_<!--{echo PSVR_KTV_SUB}-->/cache/style_1_forum_forumdisplay.css" />
+		<link rel="stylesheet" type="text/css" href="../../../data_<!--{echo PSVR_KTV_SUB}-->/cache/style_1_forum_viewthread.css" />
 		<style type="text/css">
 			body { padding-top: 50px; }
 			div { overflow: visible !important; }
@@ -192,17 +192,17 @@
 						<h2 class="ptm pbm">图片列表:48px</h2>
 						<ul class="ml mls cl">
 							<li>
-								<img src="http://www.discuz.net/data/attachment/album/cover/1d/9719.jpg" alt="" />
+								<img src="http://www.discuz.net/data_<!--{echo PSVR_KTV_SUB}-->/attachment/album/cover/1d/9719.jpg" alt="" />
 								<p>标题</p>
 								<span>附加信息</span>
 							</li>
 							<li>
-								<img src="http://www.discuz.net/data/attachment/album/cover/4d/9575.jpg" alt="" />
+								<img src="http://www.discuz.net/data_<!--{echo PSVR_KTV_SUB}-->/attachment/album/cover/4d/9575.jpg" alt="" />
 								<p>标题</p>
 								<span>附加信息</span>
 							</li>
 							<li>
-								<img src="http://www.discuz.net/data/attachment/album/cover/a0/2250.jpg" alt="" />
+								<img src="http://www.discuz.net/data_<!--{echo PSVR_KTV_SUB}-->/attachment/album/cover/a0/2250.jpg" alt="" />
 								<p>标题</p>
 								<span>附加信息</span>
 							</li>
@@ -210,17 +210,17 @@
 						<h2 class="ptm pbm">图片列表:120px</h2>
 						<ul class="ml mlm cl">
 							<li>
-								<img src="http://www.discuz.net/data/attachment/album/cover/1d/9719.jpg" alt="" />
+								<img src="http://www.discuz.net/data_<!--{echo PSVR_KTV_SUB}-->/attachment/album/cover/1d/9719.jpg" alt="" />
 								<p>标题</p>
 								<span>附加信息</span>
 							</li>
 							<li>
-								<img src="http://www.discuz.net/data/attachment/album/cover/4d/9575.jpg" alt="" />
+								<img src="http://www.discuz.net/data_<!--{echo PSVR_KTV_SUB}-->/attachment/album/cover/4d/9575.jpg" alt="" />
 								<p>标题</p>
 								<span>附加信息</span>
 							</li>
 							<li>
-								<img src="http://www.discuz.net/data/attachment/album/cover/a0/2250.jpg" alt="" />
+								<img src="http://www.discuz.net/data_<!--{echo PSVR_KTV_SUB}-->/attachment/album/cover/a0/2250.jpg" alt="" />
 								<p>标题</p>
 								<span>附加信息</span>
 							</li>
