--- a/sub/simple/simple/template/default/common/header.htm
+++ b/sub/simple/simple/template/default/common/header.htm
@@ -10,7 +10,7 @@
 	<!--{/if}-->
 	<!--{if !empty($rsshead)}-->$rsshead<!--{/if}-->
 	<!--{if widthauto()}-->
-		<link rel="stylesheet" id="css_widthauto" type="text/css" href="data/cache/style_{STYLEID}_widthauto.css?{VERHASH}" />
+		<link rel="stylesheet" id="css_widthauto" type="text/css" href="data_<!--{echo PSVR_KTV_SUB}-->/cache/style_{STYLEID}_widthauto.css?{VERHASH}" />
 		<script type="text/javascript">HTMLNODE.className += ' widthauto'</script>
 	<!--{/if}-->
 	<!--{if $_G['basescript'] == 'forum' || $_G['basescript'] == 'group'}-->
@@ -24,7 +24,7 @@
 		<script type="text/javascript" src="{$_G[setting][jspath]}portal.js?{VERHASH}"></script>
 	<!--{/if}-->
 	<!--{if $_GET['diy'] == 'yes' && check_diy_perm($topic)}-->
-	<link rel="stylesheet" type="text/css" id="diy_common" href="data/cache/style_{STYLEID}_css_diy.css?{VERHASH}" />
+	<link rel="stylesheet" type="text/css" id="diy_common" href="data_<!--{echo PSVR_KTV_SUB}-->/cache/style_{STYLEID}_css_diy.css?{VERHASH}" />
 	<!--{/if}-->
 </head>
 
