data -> data with sub almost done

--- a/sub/simple/simple/source/plugin/mobile/template/mobile.htm
+++ b/sub/simple/simple/source/plugin/mobile/template/mobile.htm
@@ -34,7 +34,7 @@
 			<div class="code y">
 				<dl>
 					<dt class="shoot">{lang mobile:qr_desc}</dt>
-					<dd class="code_img"><img src="data/cache/mobile_siteqrcode.png" alt="{lang mobile:qr}"/></dd>
+          <dd class="code_img"><img src="data_<!--{echo PSVR_KTV_SUB}-->/cache/mobile_siteqrcode.png" alt="{lang mobile:qr}"/></dd>
 					<dt>{lang mobile:wapmode}</dt>
 					<dd class="url"><a href="$_G['siteurl']" target="_blank">{$_G['siteurl']}</a></dd>
 				</dl>
