--- a/sub/app/views/layouts/application.html.erb
+++ b/sub/app/views/layouts/application.html.erb
@@ -13,8 +13,8 @@
 <meta name="copyright" content="<%= Time.now.year %> Kejian.TV Ltd." />
 <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7" />
 <meta http-equiv="imagetoolbar" content="no" />
-<link rel="stylesheet" type="text/css" href="/simple/data/cache/style_1_common.css" />
-<link rel="stylesheet" type="text/css" href="/simple/data/cache/style_1_forum_index.css" />
+<link rel="stylesheet" type="text/css" href="/simple/data_<%=Setting.ktv_sub%>/cache/style_1_common.css" />
+<link rel="stylesheet" type="text/css" href="/simple/data_<%=Setting.ktv_sub%>/cache/style_1_forum_index.css" />
 <script type="text/javascript">
   var STYLEID = '1',
       STATICURL = '/simple/static/',
