--- a/trunk/app/assets/stylesheets/ktv/__zm.css.scss.erb
+++ b/trunk/app/assets/stylesheets/ktv/__zm.css.scss.erb
@@ -1795,6 +1795,11 @@
       padding-left: 6px
   }
 
+  .firstload {
+      position: absolute;
+      left: expression(document.documentElement.scrollLeft+50+"%")
+  }
+
   .saybox .textareabox .innerborder {
       position: static
   }
@@ -1832,6 +1837,11 @@
       position: fixed;
       bottom: 0;
       left: 0
+  }
+
+  .fixedfooter {
+      position: absolute;
+      top: expression(eval(document.documentElement.scrollTop+document.documentElement.clientHeight)-70+"px")
   }
 
   .newposTips {
@@ -2814,6 +2824,11 @@
       background: #f2f2f2
   }
 
+  .dialog {
+      position: absolute;
+      left: expression(document.documentElement.scrollLeft+50+"%");
+      top: expression(eval(document.documentElement.scrollTop)+40+"px")
+  }
 
   .dialog span.success-ico {
       width: 30px;
@@ -3910,6 +3925,11 @@
       text-align: center
   }
 
+  .alertTips {
+      position: absolute;
+      left: expression(document.documentElement.scrollLeft+50+"%");
+      top: expression(eval(document.documentElement.scrollTop)+250+"px")
+  }
 
   .postcomment .commentbody .innerborder textarea.bgcolor {
       background-color: #fec
@@ -4032,6 +4052,12 @@
   .dialog .dia-addall .addcontainer a:active span.largeboard-ico {
       width: 48px;
       background-position: -76px -120px
+  }
+
+  .dialog2 {
+      position: absolute;
+      left: expression(document.documentElement.scrollLeft+50+"%");
+      top: expression(eval(document.documentElement.scrollTop)+130+"px")
   }
 
   .dialog2 {
@@ -4655,6 +4681,12 @@
   .dialog2 .dia-avatar .dia-add1 b {
       font-size: 21px;
       color: #f86
+  }
+
+  .dialog3 {
+      position: absolute;
+      left: expression(document.documentElement.scrollLeft+50+"%");
+      top: expression(eval(document.documentElement.scrollTop)+130+"px")
   }
 
   .dialog3 {
@@ -6097,6 +6129,12 @@
       border: 5px #333 solid;
       z-index: 10001;
       background: #fff
+  }
+
+  .normalDialog {
+      position: absolute;
+      left: expression(document.documentElement.scrollLeft+50+"%");
+      top: expression(eval(document.documentElement.scrollTop)+200+"px")
   }
 
   .dialogTitle {
@@ -12090,6 +12128,10 @@
       padding-left: 6px
   }
 
+  .firstload {
+      position: absolute;
+      left: expression(document.documentElement.scrollLeft+50+"%")
+  }
 
   .saybox .textareabox .innerborder {
       position: static
