--- a/trunk/app/views/coursewares/embed.html.erb
+++ b/trunk/app/views/coursewares/embed.html.erb
@@ -4,7 +4,19 @@
 end
  %>
 <% content_for :armpit do %>
+<style type="text/css" media="screen">
+  canvas{
+    background:rgba(0,0,0,0.4);
+    display:none;
+  }
+  #mycanvas{
+    background:transparent !important;
+    position:absolute;
+    z-index:9999;
+  }
+</style>
   <%= stylesheet_link_tag "ktv/ppt", :media => "all" %>
+  <%= javascript_include_tag "kinetic-v4.0.0.js" %>
   <%= javascript_include_tag "ktv/player_ppt" %>
   <script>
     var player = new Player();
@@ -386,8 +398,233 @@ end
         }
       };
       Slide.fix_cw_title();
+
+
+
+      function biji_update(group, activeAnchor) {
+        var topLeft = group.get(".topLeft")[0];
+        var topRight = group.get(".topRight")[0];
+        var bottomRight = group.get(".bottomRight")[0];
+        var bottomLeft = group.get(".bottomLeft")[0];
+        var image = group.get(".image")[0];
+
+        // update anchor positions
+        switch (activeAnchor.getName()) {
+          case "topLeft":
+            topRight.attrs.y = activeAnchor.attrs.y;
+            bottomLeft.attrs.x = activeAnchor.attrs.x;
+            break;
+          case "topRight":
+            topLeft.attrs.y = activeAnchor.attrs.y;
+            bottomRight.attrs.x = activeAnchor.attrs.x;
+            break;
+          case "bottomRight":
+            bottomLeft.attrs.y = activeAnchor.attrs.y;
+            topRight.attrs.x = activeAnchor.attrs.x;
+            break;
+          case "bottomLeft":
+            bottomRight.attrs.y = activeAnchor.attrs.y;
+            topLeft.attrs.x = activeAnchor.attrs.x;
+            break;
+        }
+
+        image.setPosition(topLeft.attrs.x, topLeft.attrs.y);
+
+        var width = topRight.attrs.x - topLeft.attrs.x;
+        var height = bottomLeft.attrs.y - topLeft.attrs.y;
+        if(width && height) {
+          image.setSize(width, height);
+        }
+        // $('#mycanvas').css('margin-top',group.attrs.x + bottomRight.attrs.x);
+        // $('#mycanvas').css('margin-left',group.attrs.y + bottomRight.attrs.y);
+      }
+      function biji_addAnchor(group, x, y, name) {
+        var stage = group.getStage();
+        var layer = group.getLayer();
+
+        var anchor = new Kinetic.Circle({
+          x: x,
+          y: y,
+          stroke: "#666",
+          fill: "#ddd",
+          strokeWidth: 2,
+          radius: 8,
+          name: name,
+          draggable: true
+        });
+
+        anchor.on("dragmove", function() {
+          biji_update(group, this);
+          layer.draw();
+        });
+        anchor.on("mousedown touchstart", function() {
+          group.setDraggable(false);
+          this.moveToTop();
+        });
+        anchor.on("dragend", function() {
+          group.setDraggable(true);
+          layer.draw();
+        });
+        // add hover styling
+        anchor.on("mouseover", function() {
+          var layer = this.getLayer();
+          document.body.style.cursor = "pointer";
+          this.setStrokeWidth(4);
+          layer.draw();
+        });
+        anchor.on("mouseout", function() {
+          var layer = this.getLayer();
+          document.body.style.cursor = "default";
+          this.setStrokeWidth(2);
+          layer.draw();
+        });
+
+        group.add(anchor);
+      }
+      biji_mycanvas_pos = function(){
+        pos = biji_group.getPosition();
+        hw = biji_rect.attrs;
+        fix = biji_group.get(".topLeft")[0].attrs;
+        $('#mycanvas').css('margin-left',pos.x + hw.width / 2 - 60 + fix.x);
+        $('#mycanvas').css('margin-top',pos.y + hw.height + 8 + fix.y);  
+      }
+      function biji_initStage() {
+        var stage = new Kinetic.Stage({
+          container: "slide",
+          width: 960,
+          height: 1242
+        });
+        var darthVaderGroup = new Kinetic.Group({
+          x: 270,
+          y: 100,
+          draggable: true
+        });
+        var layer = new Kinetic.Layer();
+
+        /*
+         * go ahead and add the groups
+         * to the layer and the layer to the
+         * stage so that the groups have knowledge
+         * of its layer and stage
+         */
+        layer.add(darthVaderGroup);
+        stage.add(layer);
+
+        // darth vader
+        var darthVaderImg = new Kinetic.Rect({
+          x: 0,
+          y: 0,
+          width: 200,
+          fill: "white",
+          stroke: "black",
+          strokeWidth: 1,
+          height: 138,
+          name: "image"
+        });
+        darthVaderImg.setOpacity(0.6);
+
+        darthVaderGroup.add(darthVaderImg);
+        biji_addAnchor(darthVaderGroup, 0, 0, "topLeft");
+        biji_addAnchor(darthVaderGroup, 200, 0, "topRight");
+        biji_addAnchor(darthVaderGroup, 200, 138, "bottomRight");
+        biji_addAnchor(darthVaderGroup, 0, 138, "bottomLeft");
+        window.biji_rect= darthVaderImg;
+        window.biji_group=darthVaderGroup;
+        darthVaderGroup.on("dragmove", function(event) {
+          this.moveToTop();
+          biji_mycanvas_pos();
+        });
+        stage.draw();
+        window.biji_canvas=stage.getDOM().children[0];
+      }
+      biji_initStage();
+      $('#zuobiji_button').click(function(){
+        $('#mycanvas').toggle();
+        $(window.biji_canvas).toggle();
+        $('.overnav').toggle();
+      })
+      
+      function makeButton(x, y, w, h, radius)
+      {
+        var canvas = document.getElementById("mycanvas"); 
+        var context = canvas.getContext("2d");
+        // clear background
+        context.beginPath();
+        // context.fillStyle="white";
+        // context.fillRect(0,0, 126, 36);
+        // draw button
+        var r = x + w;
+        var b = y + h;
+        context.moveTo(x+radius, y);
+        context.lineTo(r-radius, y);
+        context.quadraticCurveTo(r, y, r, y+radius);
+        context.lineTo(r, y+h-radius);
+        context.quadraticCurveTo(r, b, r-radius, b);
+        context.lineTo(x+radius, b);
+        context.quadraticCurveTo(x, b, x, b-radius);
+        context.lineTo(x, y+radius);
+        context.quadraticCurveTo(x, y, x+radius, y);
+        // background gradient 
+        var backgrad = context.createLinearGradient(1,1,0,30);
+        backgrad.addColorStop(0, '#3CB579');
+        backgrad.addColorStop(0.5, '#004A4A');
+        context.fillStyle = backgrad;
+        // drop shadow
+        context.shadowBlur = 3;
+        context.shadowOffsetX = 1;
+        context.shadowOffsetY = 1;
+        context.shadowColor = "#000";  
+        context.fill();
+        // the following lines before stroke are required for Chrome
+        context.shadowBlur = 0;  
+        context.shadowOffsetX = 0;
+        context.shadowOffsetY = 0;
+        context.stroke(); 
+         // label with shadowing
+        context.beginPath();
+        context.font = "12pt Calibri,Arial";
+        context.fillStyle = "#FFF";
+        context.shadowBlur = 0;
+        context.shadowOffsetX = -1;
+        context.shadowOffsetY = -1;
+        context.shadowColor = "#000";  
+        context.fillText("为此段记笔记", x+w*0.1, y+h*0.66);
+        biji_mycanvas_pos();
+      }
+      window.biji_canvasUp= function (button)
+      {
+        $(button).css('margin-left',function(index, value){
+          return parseInt(value)-1;
+        });
+        $(button).css('margin-top',function(index, value){
+          return parseInt(value)-1;
+        });
+       // button.style.margin="0";    
+       // real clicked.
+      };
+      window.biji_canvasDown=function (button)
+      {
+        $(button).css('margin-left',function(index, value){
+          return parseInt(value)+1;
+        });
+        $(button).css('margin-top',function(index, value){
+          return parseInt(value)+1;
+        });
+      };
+      window.biji_canvasOver=function ()
+      {
+        document.body.style.cursor = "pointer";
+      };
+      window.biji_canvasOut=function ()
+      {
+        document.body.style.cursor = "default";
+        makeButton(0,0,120,28,8);
+      };
+      window.biji_canvasOut();
+      window.parent.eval("$('#stickies').css('top',($('.speakerdeck-iframe').position().top + 26))");
     });
   </script>
+
 <% end %>
 
 <div id="presenter">
@@ -399,6 +636,10 @@ end
 
   </div>
   <div id="slide">
+    <canvas id="mycanvas" width="128" height="36"
+     onmousedown="window.biji_canvasDown(this)"  onmouseup="window.biji_canvasUp(this)"
+     onmouseover="window.biji_canvasOver()" onmouseout="window.biji_canvasOut()">
+    </canvas>
     <img id="slide_image" src="<%= @slides.first %>" class='visible' />
   </div>
   <div class="overnav">
@@ -418,7 +659,7 @@ end
   </div>
   <div class="previews" style="display:none"><p>第1页, 共6页</p></div>
   <div class="standard_buttons">
-    <a href="#" id="share_button">全屏</a>
+    <a href="#" id="zuobiji_button">记笔记</a>
   </div>
   <div class="overlay"></div>
   <div id="share">
