记录笔记第一波

--- a/trunk/app/assets/javascripts/ktv/application.js.erb
+++ b/trunk/app/assets/javascripts/ktv/application.js.erb
@@ -19,6 +19,7 @@
 //= require jquery.ui.resizable
 //= require jquery.effects.core
 //= require jquery.placeholder
+//= require jquery.autosize
 //= require ./pin
 //= require ./ktv
 //= require_self
